added Kernelfluffer and changed the theme of the website.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 </head>
 
 <body class="Main-Body">
-    <h1 class="body-header1">Best website ever</h1>
-
-
-
-
+    <nav id="main-nav">
+        <ul>
+            <h1 class="KernelFluffer">KernelFluffer</h1>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Story</a></li>
+            <li><a href="#">Contact</a></li>   
+        </ul>    
+    </nav>
 </body>
+
 </html>
