--- a/index.html
+++ b/index.html
@@ -8,17 +8,8 @@
     <link rel="stylesheet" href="styles.css">
     <script src="index.js"></script>
 </head>
-
-<body class="Main-Body">
-    <nav id="main-nav">
-        <ul>
-            <h1 class="KernelFluffer">KernelFluffer</h1>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Story</a></li>
-            <li><a href="#">Contact</a></li>   
-        </ul>    
-    </nav>
+<body>
+    <h1>Welcome to my portfolio</h1>
 </body>
 
 </html>
