--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <script src="index.js"></script>
 </head>
 <body>
-    <h1>Welcome to my portfolio</h1>
+    <h1>Fluffy productivity</h1>
 </body>
-
 </html>
