fixed header bar

--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
     <script src="index.js"></script>
 </head>
 <body>
-    <main>    
-        <section>
-            <h1 class="header-website-name">Portfolio</h1>
-            <li class="header-link-github"><a class="header-a-github" href="https://github.com/KernelFluffer">github</a></li>
-            <hr>
-        </section>
-    </main>
-    <section>
-    <p>Welcome to my portfolio website</p> 
+    <header class="header-section">
+        <h1 class="header-title">Portfolio</h1>
+        <li class="header-github"><a class="header-a-github" href="https://github.com/KernelFluffer">github</a></li>
+    </header>    
+
+    <p class="main-p" >Welcome to my portfolio website</p> 
     </section>
     
-    
+    <section>
+    <footer class="footer">
+    <p>&copy; 2024 KernelFluffer</p>
+    </footer>
+    </section>
+
+
 </body>
 </html>
