--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
         <h1 class="header-title">Portfolio</h1>
         <li class="header-github"><a class="header-a-github" href="https://github.com/KernelFluffer">github</a></li>
     </header>    
-
+    
+    <section>
     <p class="main-p" >Welcome to my portfolio website</p> 
     </section>
     
     <section>
-    <footer class="footer">
-    <p>&copy; 2024 KernelFluffer</p>
-    </footer>
+        <footer class="footer">
+            <p>&copy; 2024 KernelFluffer</p>
+        </footer>
     </section>
 
 
