--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
     <p class="main-p" >Welcome to my portfolio website</p> 
     </section>
     
+    <section class="portfolio-part">
+        <button><img src=""></button>
+    </section>
+
     <section>
         <footer class="footer">
             <p>&copy; 2024 KernelFluffer</p>
         </footer>
     </section>
-
-
 </body>
 </html>
